styles/base.css
nav{
	width: 85%;
	position:absolute; top: 1px; left: 10.05em; right: 5px;
	margin-left:.2em;
}
#nav_bar ul{
	list-style: none;
	padding: .5em 0;
	background-color: #ED74A9;
	text-align: center;
	border-bottom: 8px solid #E72A74;
	border-radius: 0px 0px 0px 0px;
}

#nav_bar li{
	display: inline;
}
#nav_bar a{
	padding: 1em 1em;
	color: black;
	font-weight: bold;
	text-decoration: none;
	letter-spacing: 1px;
}
nav > ul > li:hover > a {
	background-color: #E72A74;
	border-radius: 2px 2px 2px 2px;
}
body{
	color: #686B72;
	font-family: Arial, Helvetica, sans-serif;
}
#slideshow{
	float: right;
	margin-right:1.25%;
}
#facebook{
	float: left;
}
#bottom{
	clear: both;
}
#banner{
	margin-top: 53px;
	background-color: solid white;
	margin-left:154px;
	position: absolute; top: 8px; left: 10px; right: 5px;
	width:85%;
	height: 213px;
	margin-bottom:2px;
	border-bottom: 4px solid #E72A74;
}
#color-tab{
	background-color:#E72A74;
	border-radius: 2px 2px 2px 2px;
}

#logo{
	float: left;
	position: absolute; top: 7.1px; left: 0px; right: 20px;
	border-bottom: 4px solid #E72A74;
	padding-bottom: 8px;
	height: 259px;
}
#teamphoto{
	display:block;
	margin-left:auto;
	margin-right:auto;

}
#skaters_pics{
  margin:5px;
  padding: 5px;
  height:auto;
  width:auto;
  float:left;
  text-align:center;
  margin-left:5%;
}
div.img {
  margin:5px;
  padding: 5px;
  border:1px solid #686B72;
  height:auto;
  width:auto;
  float:left;
  text-align:center;
  box-shadow:2px 2px 2px 2px #686B72;
  border-radius:5px 5px 5px 5px;
  }
div.img img
  {
  display:inline;
  margin:5px;
  border:1px solid #ffffff;
  border-radius:4px 4px 4px 4px;
  margin-left:10px;
  }
div.img a:hover img
  {
  border:1px solid #686B72;
  }
div.desc
  {
  text-align:center;
  font-weight:normal;
  width:120px;
  margin:5px;
  }

#contact{
	text-align:center;
}
#face{
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top:-160px;
	margin-left:-151px;
}
#contact{
	text-align: center;
}
footer{
	border: 1px;
	background-color: #ED74A9;
	color: black;
	border-radius: 10px 10px 10px 10px;
	clear: left;
	margin-top: 20em;
}
.photowh{
	width: 177px;
	height: 130px;
}
#centertx1{
	text-align: center;
}
#faq{
	margin-top: 70px;
	text-align: center;
}

.faqtext
{
	float:left;
	margin-right:225px;
	width:80%;
	margin-left:

}

.faq_pic
{
	width: 258px;
	height: 200px;
	float:right;
}
#faqinfo
{
	width:100%
}
.right_tble
{
	width:200px;
}

